@@ -1,6 +1,10 @@
+2004-01-30  Kingpin  <mthurn@verizon.net>
+
+	* lib/I18N/Charset.pm (_init_data): new IANA document (typos fixed)
+
 2004-01-24  Kingpin  <mthurn@verizon.net>
 
-	* lib/I18N/Charset.pm (_init_data): 5 new charsets in IANA document
+	* lib/I18N/Charset.pm (_init_data): new IANA document (5 new charsets)
 
 2004-01-15  Kingpin  <mthurn@verizon.net>
 
